--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -10,9 +9,6 @@
     <script type="text/javascript">window.performance.mark('begin_head_load');</script>
     <link rel="icon" type="image/png" href="./icon/favicon.ico">
     <!-- CSS -->
-    <!-- Local - vendor -->
-
-
     <!-- Remote - vendor -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css" rel="stylesheet">
@@ -28,7 +24,6 @@
         window.performance.measure('head_css_load_time', 'begin_head_load', 'end_head_load_css');</script>
     <!-- Javascript -->
     <!-- Local - vendor -->
-
     <!-- Remote - vendor -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -48,20 +43,18 @@
     <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.js"></script>
 
     <script src="https://unpkg.com/filepond/dist/filepond.min.js"></script>
+    <!-- <script src="https://peterolson.github.io/BigInteger.js/BigInteger.min.js"></script> -->
     <script type="text/javascript" src="https://unpkg.com/@zxing/library@latest"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     <script src="https://kit.fontawesome.com/5fb01d0cce.js" crossorigin="anonymous"></script>
     <script type="text/javascript">window.performance.mark('end_head_load_js');
         window.performance.measure('head_js_load_time', 'end_head_load_css', 'end_head_load_js');</script>
-    <!-- Local - custom -->
-
 </head>
 
 <body>
     <script type="text/javascript">window.performance.mark('begin_body_load');</script>
     <div class="row">
-
         <div class="col-xs-offset-2 col-xs-8">
             <img class="mx-auto d-block" src="./images/logo.svg" alt="misplaced wheels logo" id="logo" />
         </div>
@@ -71,7 +64,6 @@
         <br />
         <br />
     </div>
-
 
     <ul class="nav nav-tabs nav nav-pills navbar text-center justify-content-center text-body font-weight-bold"
         id="nav_tabs" role="tablist">
@@ -92,24 +84,17 @@
         <div class="tab-pane show active" role="tabpanel" id="tab_location">
             <div class="container" style="width: device-width; max-width: 400px; background-color: #ffffff;">
                 <h1 class="text-center" style="font-size: 20px;"><br>Select the location of bike/scooter</h1>
-
                 <div id="map"></div>
                 <div class="d-flex">
-
-
-
                     <button type="button"
                         class="btn btn-block text-center d-flex align-items-center mx-auto  btn-continue darktext flex-fill"
                         id="location_continue">Continue &nbsp;<i class="fas fa-chevron-right"></i></button>
-
                 </div>
-
             </div>
         </div>
 
         <div class="tab-pane" role="tabpanel" id="tab_classification">
             <div class="container-fluid">
-
                 <!-- <div class="card choose_file h-20 d-inline-block">
                     <div class="container h-80">
                         <div class="row justify-content-center ">
@@ -122,22 +107,16 @@
                         </div>
                     </div>
                 </div> -->
-
                 <!-- We'll transform this input into a pond -->
                 <input type="file" class="filepond" name="filepond" data-max-file-size="10MB" data-max-files="1">
-
                 <div class="card-body low-opacity" id="infraction_div">
                     <p class="card-text">Select all parking infractions that apply:</p>
                     <div class="row">
                         <div class="col-sm-4 col-xs-12">
                             <div data-toggle="buttons" id="infraction_list">
-
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="" id="infraction_list">
-
-                    </div> -->
                 </div>
                 <div class="card-body low-opacity" id="company_div">
                     <p class="card-text">Please select the wheel type:</p>
@@ -151,13 +130,12 @@
                         </div>
                     </div>
                 </div>
-
                 <p id="classification_continue_warning" class="text-danger d-flex justify-content-around"> &nbsp; </p>
                 <div class="d-flex">
                     <button type="button"
                         class="btn btn-block text-center d-flex  align-items-center mx-auto back-button darktext flex-fill"
                         id="classification_back"> <i class="fas fa-chevron-left"></i> &nbsp; Back</button>
-                    <button type="button" class="btn text-center d-flex flex-grow-1 flex-lg-grow-0 btn-continue"
+                    <button type="button" class="btn btn-block text-center d-flex align-items-center mx-auto  btn-continue darktext flex-fill"
                         id="classification_continue" style="width: 88px; visibility: hidden;">Continue &nbsp;<i
                             class="fas fa-chevron-right"></i></button>
                 </div>
@@ -173,13 +151,10 @@
                 <pre><code id="result"></code></pre>
                 <video id="video" class="d-flex align-items-center mx-auto" width="300" height="200"
                     style="border: 1px solid gray"></video>
-
                 <div class="d-flex">
-
                     <button type="button"
                         class="btn btn-block text-center d-flex  align-items-center mx-auto back-button darktext flex-fill"
                         id="identification_back"> <i class="fas fa-chevron-left"></i> &nbsp; Back</button>
-
                     <button type="button"
                         class="btn btn-block text-center d-flex align-items-center mx-auto  btn-continue darktext flex-fill"
                         id="identification_continue" onclick="socketSubmit();">Submit &nbsp;<i
@@ -194,7 +169,6 @@
     <script src="./js/initializationcontroller.js"></script>
     <script src="./js/filepond_jq.js"></script>
     <script src="./js/navigationcontroller.js"></script>
-    <script src="./js/imagecontroller.js"></script>
     <script type="text/javascript">window.performance.mark('end_body_load_js');
         window.performance.measure('body_js_load_time', 'end_body_load_html', 'end_body_load_js');
         var items = window.performance.getEntriesByType('measure');
@@ -203,5 +177,4 @@
             console.log(' ' + req.name + ' took ' + req.duration + 'ms');
         }</script>
 </body>
-
 </html>
