fix for the cont button

--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
                         class="btn btn-block text-center d-flex  align-items-center mx-auto back-button darktext flex-fill"
                         id="classification_back"> <i class="fas fa-chevron-left"></i> &nbsp; Back</button>
                     <button type="button" class="btn btn-block text-center d-flex align-items-center mx-auto  btn-continue darktext flex-fill"
-                        id="classification_continue" style="width: 88px; visibility: hidden;">Continue &nbsp;<i
+                        id="classification_continue" style="visibility: hidden;">Continue &nbsp;<i
                             class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
