Updated the ident tab for iOS fallback

--- a/public/index.html
+++ b/public/index.html
@@ -144,10 +144,10 @@
 
         <div class="tab-pane" role="tabpanel" id="tab_identification">
             <div class="container" style="width: device-width; max-width: 400px; background-color: #ffffff;">
-                <h1 class="text-center" style="font-size: 20px;"><br>Optionally, please also scan the vehicle's QR code
+                <h1 class="text-center" style="font-size: 20px;" id="qrlead"><br>Optionally, please scan the vehicle's QR code
                 </h1>
 
-                <label>Result:</label>
+                <label>Vehicle ID:</label>
                 <pre><code id="result"></code></pre>
                 <video id="video" class="d-flex align-items-center mx-auto" width="300" height="200"
                     style="border: 1px solid gray"></video>
