Updated the map, added feedback link etc.

--- a/public/html/thanks.html
+++ b/public/html/thanks.html
@@ -21,9 +21,12 @@
 
     <div class="container" style="width: 340px;">
         <h1 class="text-center justify-content-center align-items-center align-content-center align-self-center mx-auto"
-            style="font-size: 23px;"><br><br>Thank you for keeping your city clean.<br><br><br></h1><a
-            class="btn btn-primary text-center d-flex justify-content-center mx-auto" role="button"
-            style="width: 158px;" href="../index.html">Submit new case</a>
+            style="font-size: 23px;"><br><br>Thank you for keeping your city clean.<br><br><br></h1>
+            <a class="btn btn-primary text-center d-flex justify-content-center mx-auto" role="button"
+            style="width: 158px;" href="../index.html">Submit new case</a><br>
+            <a class="btn btn-secondary text-center d-flex justify-content-center mx-auto" role="button"
+            style="width: 158px;" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdPzYEy4yn-LZd8WO2VfZLcd-U-9XrIubHBRkP-7HfvCIpJgQ/viewform">Fill Survey</a>
+
     </div>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
