--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,8 @@
 
     <script src="https://unpkg.com/filepond/dist/filepond.min.js"></script>
     <!-- <script src="https://peterolson.github.io/BigInteger.js/BigInteger.min.js"></script> -->
-    <script type="text/javascript" src="https://unpkg.com/@zxing/library@latest"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bowser@2.5.3/es5.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/@zxing/library@0.15.2"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     <script src="https://kit.fontawesome.com/5fb01d0cce.js" crossorigin="anonymous"></script>
