geocoder, zoom setting etc.

--- a/public/html/thanks.html
+++ b/public/html/thanks.html
@@ -21,7 +21,7 @@
 
     <div class="container" style="width: 340px;">
         <h1 class="text-center justify-content-center align-items-center align-content-center align-self-center mx-auto"
-            style="font-size: 23px;"><br><br>Thank you for keeping your city clean.<br><br><br></h1>
+            style="font-size: 23px;"><br><br>Thanks for making bike-share and scooter-share work better.<br><br><br></h1>
             <a class="btn btn-primary text-center d-flex justify-content-center mx-auto" role="button"
             style="width: 158px;" href="../index.html">Submit new case</a><br>
             <a class="btn btn-secondary text-center d-flex justify-content-center mx-auto" role="button"
