Handle screen rotation

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <meta name="Description"
         content="A website to report misplaced wheels - report misparked shared bikes and scooters.">
     <title>Misplaced Wheels</title>
@@ -74,55 +75,57 @@
 
 <body>
     <script type="text/javascript">window.performance.mark('begin_body_load');</script>
-    <div class="row">
-        <div class="col-xs-offset-2 col-xs-8">
-            <img class="mx-auto d-block" src="./images/logo.svg" alt="misplaced wheels logo" id="logo" />
+
+    
+        <div class="row">
+            <div class="col-xs-offset-2 col-xs-8">
+                <img class="mx-auto d-block" src="./images/logo.svg" alt="misplaced wheels logo" id="logo" />
+            </div>
+            <div class="d-flex align-items-end col-xs-2">
+                <div id="city_name"></div>
+            </div>
+            <br />
+            <br />
         </div>
-        <div class="d-flex align-items-end col-xs-2">
-            <div id="city_name"></div>
-        </div>
-        <br />
-        <br />
-    </div>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="nav nav-tabs nav navbar-expand-xs nav-pills navbar text-center justify-content-center text-body font-weight-bold"
-                id="nav_tabs" role="tablist">
-                <li class="nav-item disabled" id="li_location"><a
-                        class="navbar-active active lighttext nav-link  font-weight-bold" href="#tab_location"
-                        role="tab" data-toggle="tab">Location</a></li>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="nav nav-tabs nav navbar-expand-xs nav-pills navbar text-center justify-content-center text-body font-weight-bold"
+                    id="nav_tabs" role="tablist">
+                    <li class="nav-item disabled" id="li_location"><a
+                            class="navbar-active active lighttext nav-link  font-weight-bold" href="#tab_location"
+                            role="tab" data-toggle="tab">Location</a></li>
 
-                <li class="nav-item" id="li_classification"><a class="lighttext nav-link font-weight-bold"
-                        href="#tab_classification" role="tab" data-toggle="">Classification</a>
-                </li>
+                    <li class="nav-item" id="li_classification"><a class="lighttext nav-link font-weight-bold"
+                            href="#tab_classification" role="tab" data-toggle="">Classification</a>
+                    </li>
 
-                <li class="nav-item disabled" id="li_identification"><a class="lighttext nav-link  font-weight-bold"
-                        href="#tab_identification" role="tab" data-toggle="">Identification</a></li>
-            </ul>
-        </div>
-    </nav>
-    <div class="tab-content">
+                    <li class="nav-item disabled" id="li_identification"><a class="lighttext nav-link  font-weight-bold"
+                            href="#tab_identification" role="tab" data-toggle="">Identification</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="tab-content" id="container">
 
-        <div class="tab-pane show active" role="tabpanel" id="tab_location">
-            <div class="container" style="width: device-width; max-width: 400px; background-color: #ffffff;">
-                <h5 class="text-center">Select the location of bike/scooter</h5>
-                <div id="map"></div>
-                <div class="d-flex">
-                    <button type="button"
-                        class="btn btn-block text-center d-flex align-items-center mx-auto  btn-continue darktext flex-fill"
-                        id="location_continue">Continue &nbsp;<i class="fas fa-chevron-right"></i></button>
+            <div class="tab-pane show active" role="tabpanel" id="tab_location">
+                <div class="container" style="width: device-width; max-width: 400px; background-color: #ffffff;">
+                    <h5 class="text-center">Select the location of bike/scooter</h5>
+                    <div id="map"></div>
+                    <div class="d-flex">
+                        <button type="button"
+                            class="btn btn-block text-center d-flex align-items-center mx-auto  btn-continue darktext flex-fill"
+                            id="location_continue">Continue &nbsp;<i class="fas fa-chevron-right"></i></button>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="tab-pane" role="tabpanel" id="tab_classification">
-            <div class="container-fluid">
-                <!-- <div class="card choose_file h-20 d-inline-block">
+            <div class="tab-pane" role="tabpanel" id="tab_classification">
+                <div class="container-fluid">
+                    <!-- <div class="card choose_file h-20 d-inline-block">
                     <div class="container h-80">
                         <div class="row justify-content-center ">
                             <i class="fas fa-camera fa-7x"></i>
@@ -134,66 +137,74 @@
                         </div>
                     </div>
                 </div> -->
-                <!-- We'll transform this input into a pond -->
-                <input type="file" class="filepond" name="filepond" data-max-file-size="10MB" data-max-files="1">
-                <div class="card-body low-opacity" id="infraction_div">
-                    <p class="card-text">Select all parking infractions that apply:</p>
-                    <div class="row">
-                        <div class="col-sm-4 col-xs-12">
-                            <div data-toggle="buttons" id="infraction_list">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-body low-opacity" id="company_div">
-                    <p class="card-text">Please select the wheel type:</p>
-                    <div class="card-text">
+                    <!-- We'll transform this input into a pond -->
+                    <input type="file" class="filepond" name="filepond" data-max-file-size="10MB" data-max-files="1">
+                    <div class="card-body low-opacity" id="infraction_div">
+                        <p class="card-text">Select all parking infractions that apply:</p>
                         <div class="row">
                             <div class="col-sm-4 col-xs-12">
-                                <div data-toggle="radiobuttons" id="company_list">
-
+                                <div data-toggle="buttons" id="infraction_list">
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <p id="classification_continue_warning" class="text-danger d-flex justify-content-around"> &nbsp; </p>
-                <div class="d-flex">
-                    <button type="button"
-                        class="btn btn-block text-center d-flex  align-items-center mx-auto back-button darktext flex-fill"
-                        id="classification_back"> <i class="fas fa-chevron-left"></i> &nbsp; Back</button>
-                    <button type="button"
-                        class="btn btn-block text-center d-flex align-items-center mx-auto  btn-continue darktext flex-fill"
-                        id="classification_continue" style="visibility: hidden;">Continue &nbsp;<i
-                            class="fas fa-chevron-right"></i></button>
+                    <div class="card-body low-opacity" id="company_div">
+                        <p class="card-text">Please select the wheel type:</p>
+                        <div class="card-text">
+                            <div class="row">
+                                <div class="col-sm-4 col-xs-12">
+                                    <div data-toggle="radiobuttons" id="company_list">
 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <p id="classification_continue_warning" class="text-danger d-flex justify-content-around"> &nbsp;
+                    </p>
+                    <div class="d-flex">
+                        <button type="button"
+                            class="btn btn-block text-center d-flex  align-items-center mx-auto back-button darktext flex-fill"
+                            id="classification_back"> <i class="fas fa-chevron-left"></i> &nbsp; Back</button>
+                        <button type="button"
+                            class="btn btn-block text-center d-flex align-items-center mx-auto  btn-continue darktext flex-fill"
+                            id="classification_continue" style="visibility: hidden;">Continue &nbsp;<i
+                                class="fas fa-chevron-right"></i></button>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="tab-pane" role="tabpanel" id="tab_identification">
+                <div class="container" style="width: device-width; max-width: 400px; background-color: #ffffff;">
+                    <h1 class="text-center" style="font-size: 20px;" id="qrlead"><br>Optionally, please scan the
+                        vehicle's
+                        QR code
+                    </h1>
+
+                    <label>Vehicle ID:</label>
+                    <pre><code id="result"></code></pre>
+
+                    <video id="video" class="d-flex align-items-center mx-auto" style=""></video>
+                    <div class="d-flex">
+                        <button type="button"
+                            class="btn btn-block text-center d-flex  align-items-center mx-auto back-button darktext flex-fill"
+                            id="identification_back"> <i class="fas fa-chevron-left"></i> &nbsp; Back</button>
+                        <button type="button"
+                            class="btn btn-block text-center d-flex align-items-center mx-auto  btn-continue darktext flex-fill"
+                            id="identification_continue" onclick="socketSubmit();">Submit &nbsp;<i
+                                class="fas fa-check"></i></button>
+
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="tab-pane" role="tabpanel" id="tab_identification">
-            <div class="container" style="width: device-width; max-width: 400px; background-color: #ffffff;">
-                <h1 class="text-center" style="font-size: 20px;" id="qrlead"><br>Optionally, please scan the vehicle's
-                    QR code
-                </h1>
-
-                <label>Vehicle ID:</label>
-                <pre><code id="result"></code></pre>
-
-                <video id="video" class="d-flex align-items-center mx-auto" style=""></video>
-                <div class="d-flex">
-                    <button type="button"
-                        class="btn btn-block text-center d-flex  align-items-center mx-auto back-button darktext flex-fill"
-                        id="identification_back"> <i class="fas fa-chevron-left"></i> &nbsp; Back</button>
-                    <button type="button"
-                        class="btn btn-block text-center d-flex align-items-center mx-auto  btn-continue darktext flex-fill"
-                        id="identification_continue" onclick="socketSubmit();">Submit &nbsp;<i
-                            class="fas fa-check"></i></button>
-
-                </div>
-            </div>
+        <div id="turn">
+            <h4>Please rotate your device!</h4>
         </div>
-    </div>
+
+    
     <script src="./js/initializationcontroller.js"></script>
     <script src="./js/filepond_jq.js"></script>
     <script src="./js/navigationcontroller.js"></script>
