Continue btn size and text

--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
                             id="classification_back"> <i class="fas fa-chevron-left"></i> &nbsp; Back</button>
                         <button type="button"
                             class="btn btn-block text-center d-flex align-items-center mx-auto  btn-continue darktext flex-fill"
-                            id="classification_continue" style="visibility: hidden;">Continue &nbsp;<i
+                            id="classification_continue" disabled>Continue on image upload &nbsp;<i
                                 class="fas fa-chevron-right"></i></button>
 
                     </div>
